Finish modernization of yang-maven-plugin
This converts the final bits of the code base to use java.nio.file.Path,
allowing us to flip modernizer to enforcing mode.

JIRA: YANGTOOLS-1693
Change-Id: I7d59d97c3b111d5403154fde150f70c77b0ac643
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>